<resources>
    <!-- General strings -->
    <string name="app_name">PanchyLime</string>

    <!-- LoginActivity, RegisterActivity strings -->
    <string name="user_hint">USUARIO</string>
    <string name="email_hint">EMAIL</string>
    <string name="passwd_hint">CONTRASEÑA</string>
    <string name="btn_login">ACCEDER</string>
    <string name="btn_signin">REGISTRARSE</string>

    <string name="user_err">Introduce un nombre de usuario</string>
    <string name="email_err">Introduce el email</string>
    <string name="passwd_err">Contraseña no valida</string>
    <string name="login_err">Datos incorrectos</string>
    <string-array name="default_slimes">
        <item>Slime verde</item>
        <item>Slime rosa</item>
        <item>Slime azul</item>
    </string-array>


    <!-- IndexActivity strings -->
    <!-- IndexFragment strings -->

    <!-- BagFragment strings -->
    <string name="fragBag_title">INVENTARIO</string>
    <!-- PlayFragment strings -->
    <string name="fragPlay_title">JUEGOS</string>
    <!-- TICTACTOE -->
    <string name="game_2_title">TIC-TAC-TOE</string>
    <string name="game_2_desc">Tipico juego tradicional, Tres en Raya, con nuestro estilo.</string>
    <string name="game_2_win">HAS GANADO ^-^</string>
    <string name="game_2_lose">HAS PERDIDO ;-;</string>
    <string name="game_2_draw">EMPATE -_-</string>
    <!-- SAVE THE SLIME -->
    <string name="game_1_title">SAVE THE SLIME</string>
    <string name="game_1_desc">Tienes que esquivar las gotas de lluvia que te iran cayendo.</string>
    <string name="game_1_record">NUEVO RECORD</string>
    <string name="game_1_normal">BUENA PARTIDA</string>

    <!-- UserFragment strings -->
    <string name="fragAcc_title">PERFIL</string>
    <string name="fragAcc_userdata">DATOS DE USUARIO</string>
    <string name="fragAcc_email">email:</string>
    <string name="fragAcc_count">Descubiertos:</string>
    <string name="fragAcc_date">Jugado desde:</string>

    <!-- GachaFragment strings -->
    <string name="fragGacha_title">GACHA</string>
    <string name="gacha_note">5 monedas = 1 tirada</string>
    <string name="coins_warning">No tienes suficientes monedas</string>
    <string name="newOne">NUEVO</string>

    <!-- MenuBottomNavBar strings -->
    <string name="index">Inicio</string>
    <string name="play">Jugar</string>
    <string name="bag">Bolsa</string>
    <string name="gacha">Gacha</string>
    <string name="user">Perfil</string>

    <!-- LogOutDialog strings -->
    <string name="dialog_title">PANCHYLIME</string>
    <string name="dialog_desc">¿Quieres desconectarte?</string>
    <string name="dialog_ok">SI</string>
    <string name="dialog_KO">NO</string>

    <!-- GameDialog strings -->
    <string name="result_title">RESULTADOS</string>

    <!-- ERROR strings -->
    <string name="fatal_error">ERROR FATAL: POR FAVOR CONTACTE CON EL ADMINISTRADOR</string>
    <string name="load_error">ERROR: LA INFORMACION NO SE HA PODIDO CARGAR</string>

</resources>