<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/panchylime" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/pixeled"
            android:hint="@string/user_hint"
            android:inputType="text"
            android:textSize="12sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/pixeled"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textSize="12sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/pixeled"
            android:hint="@string/passwd_hint"
            android:inputType="textPassword"
            android:textSize="12sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Spinner
            android:id="@+id/firstPet_sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/default_slimes"
            android:theme="@style/SpinnerTheme"
            android:spinnerMode="dialog" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/rg_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixeled"
            android:text="@string/btn_signin"
            android:textColor="@color/black_32"
            android:textSize="12sp"
            app:strokeColor="@color/black_32"
            app:strokeWidth="3dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>